--- a/app/bower.json
+++ b/app/bower.json
@@ -2,7 +2,9 @@
   "name": "countpy",
   "homepage": "https://github.com/soodoku/countpy",
   "dependencies": {
-    "jquery": "^3.3.1",
-    "bootstrap": "bootstrap4#^4.1.3"
+    "jquery": "^3.2.1",
+    "bootstrap": "bootstrap4#^4.1.3",
+    "open-iconic": "^1.1.0",
+    "popper.js": "^1.12.9"
   }
 }
