--- a/lib/github.ini
+++ b/lib/github.ini
@@ -1,5 +1,6 @@
 [credentials]
 # username = password
+khanhtdk = d7e968f790b6b3ac5a44d4c0f4a6335aa045c81f
 
 [search_options]
 period       = 1 year
